added content and styles to most on content on page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,105 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Skip Link for accessibility -->
+    <a href="#mainContent" class="skip-link">Skip to main content</a>
+
+    <!-- start of navBar -->
+    <nav class="nav-sect">
+        <ul class="nav-links">
+            <li>
+                <a href="#home">Home</a>
+            </li>
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#services">Services</a>
+            </li>
+            <li>
+                <a href="#portfolio">Portfolio</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <!-- End of nav -->
+
+    <!-- start of header section -->
+    <header class="header-sect">
+        <div class="wrapper intro-section">
+            <h2 class="greeting">hi there!</h2>
+            <h1 class="my-intro">I'm ryan and i'm a developer 🏄🏻‍♂️</h1>
+            <p>My unique love and passion for design and developing has lead me into a career filled with joy and genuine enthusiasm. Using my skillset, I can create a beautiful web site with functionality that best suits your needs! Customer service and prompt delivery of services, I would love to work together with you and your team that will make your product sparkle ✨ </p>
+        </div>
+    </header>
+    <!-- end of header section -->
+
+    <!-- start of main content -->
+    <main id="main-content" class="main-content">
+        <!-- start of bio section -->
+        <section class="bio-section">
+            <div class="wrapper bio-section">
+                <div class="head-shot">
+                    <img src="./assets/ryan-head-1.jpg" alt="" class="headshot">
+                </div>
+                <div class="my-bio">
+                    <h2>A little about me 🐢</h2>
+                    <p>I first discovered coding through a relative and once I first wrote my fiirst line of code the rest was history. When I'm not working on projects for myself or others, you can find me watching Formula 1, listening to heavy metal or catching the latest horror flick 👻. </p>
+                    <button class="resume pulse">My Resume</button>
+                </div>
+            </div>
+        </section>
+        <!-- end of bio section -->
+
+        <!-- start of portfolio section -->
+        <section class="portfolio">
+            <div class="wrapper">
+                <h2 class="port-title">My Stuff! (hard work)</h2>
+                <div class="gal-container">
+                    <div class="port-container">
+                        <h3>Project 1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorem recusandae.</p>
+                        <button class="port-button">Check it out!</button>
+                    </div>
+                    <div class="port-container">
+                        <h3>Project 2</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorem recusandae.</p>
+                        <button class="port-button">Check it out!</button>
+                    </div>
+                    <div class="port-container">
+                        <h3>Project 3</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorem recusandae.</p>
+                        <button class="port-button">Check it out!</button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- end of portfolio section -->
+
+        <!-- start of services section -->
+        <section class="services" id="services">
+            <div class="wrapper">
+                <h2>my skillz</h2>
+                <div class="gal-container">                    
+
+                </div>
+            </div>
+        </section>
+        <!-- end of services section -->
+
+        <!-- end of main content -->
+    </main>
+
+    <footer class="footer" id="footer">
+        <h4>Built and created by Ryan Stedman-Smith 2022🤘🏼</h4>
+    </footer>
+
+
+
+
+
 </body>
 </html>
