added headshot and style

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="bio-section">
             <div class="wrapper bio-section">
                 <div class="head-shot">
-                    <img src="./assets/ryan-head-1.jpg" alt="" class="headshot">
+                    <img src="./assets/ryansted-head.png" alt="" class="headshot">
                 </div>
                 <div class="my-bio">
                     <h2>A little about me 🐢</h2>
