--- a/index.html
+++ b/index.html
@@ -87,12 +87,7 @@
         <!-- end of main content -->
     </main>
     <footer class="footer" id="footer">
-        <h4>Built and created by Ryan Stedman-Smith 2022🤘🏼</h4>
+        <h4>Built and created with 🍕 and ❤️ by me (2025)</h4>
     </footer>
-
-
-
-
-
 </body>
 </html>
